# cargo_auto_lib

./: .auto_version_from_date.json  .automation_tasks_rs_file_hashes.json  .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  RELEASES.md  output1.json  temp5.txt
.github/workflows/: rust_fmt_auto_build_test.yml  win_rust_fmt_auto_build_test.yml
automation_tasks_rs/: .file_hashes.json  .gitignore  Cargo.toml  auto_version_from_date.md  cargo_auto_config.json
automation_tasks_rs/src/: cargo_auto_github_api_mod.rs  generic_functions_mod.rs  main.rs  secrets_always_local_mod.rs
automation_tasks_rs/src/encrypt_decrypt_with_ssh_key_mod/: crates_io_api_token_mod.rs  encrypt_decrypt_mod.rs  github_api_token_with_oauth2_mod.rs  mod.rs
doc_comments/: README_DOC_COMMENTS.md  auto_cargo_toml_to_md.md  auto_encrypt_decrypt_with_ssh_mod.md  auto_lines_of_code.md  auto_md_to_doc_comments.md  auto_plantuml.md  auto_playground_run_code.md  auto_version_from_date.md  copy_folder_files_into_module.md  exit_if_not_run_in_rust_project_root_directory.md  public_api_mod.md  traverse_dir_with_exclude_dir.md
doc_comments_long/: README.md  README_DOC_COMMENTS.md  auto_cargo_toml_to_md.md  auto_encrypt_decrypt_with_ssh_mod.md  auto_lines_of_code.md  auto_md_to_doc_comments.md  auto_plantuml.md  auto_playground_run_code.md  auto_version_from_date.md  exit_if_not_run_in_rust_project_root_directory.md  public_api_mod.md  traverse_dir_with_exclude_dir.md
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js  tidy_warnings.txt
docs/cargo_auto_lib/: all.html  constant.BLUE.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  enum.Error.html  enum.LibError.html  fn.add_message_to_unreleased.html  fn.api_call_repository_new.html  fn.ask_for_github_ssh_for_push.html  fn.auto_cargo_toml_to_md.html  fn.auto_check_micro_xml.html  fn.auto_delete_old_js_snippets.html  fn.auto_doc_tidy_html.html  fn.auto_lines_of_code.html  fn.auto_md_to_doc_comments.html  fn.auto_plantuml.html  fn.auto_plantuml_for_path.html  fn.auto_playground_run_code.html  fn.auto_semver_increment_minor.html  fn.auto_semver_increment_minor_forced.html  fn.auto_semver_increment_patch.html  fn.auto_semver_increment_patch_forced.html  fn.auto_version_from_date.html  fn.auto_version_from_date_forced.html  fn.auto_version_increment_semver_or_date.html  fn.auto_version_increment_semver_or_date_forced.html  fn.body_text_from_releases_md.html  fn.completion_return_one_or_more_sub_commands.html  fn.concatenate_vec_to_string.html  fn.copy_folder_files_into_module.html  fn.create_new_version_in_releases_md.html  fn.description_and_topics_to_github.html  fn.exit_if_not_run_in_rust_project_root_directory.html  fn.find_from.html  fn.find_pos_end_data_before_delimiter.html  fn.find_pos_start_data_after_delimiter.html  fn.get_identity_from_ssh_config.html  fn.git_has_remote.html  (+47 more)
docs/cargo_auto_lib/auto_cargo_toml_mod/: fn.github_owner.html  fn.package_authors_string.html  fn.package_authors_string_without_emails.html  fn.package_description.html  fn.package_name.html  fn.package_repository.html  fn.package_version.html  fn.workspace_members.html  index.html  sidebar-items.js  struct.CARGO_TOML.html  struct.CargoToml.html  struct.PACKAGE.html  struct.REGEX_EXTRACT_DOMAIN.html  struct.REGEX_REMOVE_EMAIL.html
docs/cargo_auto_lib/auto_cargo_toml_to_md_mod/: fn.auto_cargo_toml_to_md.html  fn.do_one_project.html  fn.utc_now.html  index.html  sidebar-items.js  struct.REGEX_MD_END.html  struct.REGEX_MD_START.html  struct.REGEX_REMOVE_EMAIL.html
docs/cargo_auto_lib/auto_check_micro_xml_mod/: fn.auto_check_micro_xml.html  fn.check_micro_xml.html  index.html  sidebar-items.js
docs/cargo_auto_lib/auto_copy_files_to_strings_mod/: fn.copy_folder_files_into_module.html  index.html  sidebar-items.js
docs/cargo_auto_lib/auto_crates_io_mod/: constant.CRATES_IO_TOKEN_PATH.html  fn.check_or_get_crates_io_token.html  fn.publish_to_crates_io_with_secret_token.html  index.html  sidebar-items.js
docs/cargo_auto_lib/auto_delete_old_js_snippets_mod/: fn.auto_delete_old_js_snippets.html  index.html  sidebar-items.js
docs/cargo_auto_lib/auto_doc_tidy_html_mod/: fn.auto_doc_tidy_html.html  index.html  sidebar-items.js
docs/cargo_auto_lib/auto_encrypt_decrypt_with_ssh_mod/: fn.decrypt_with_ssh_from_file.html  fn.decrypt_with_ssh_from_json.html  fn.encrypt_with_ssh_interactive_save_file.html  fn.encrypt_with_ssh_interactive_save_json.html  fn.file_exists.html  fn.file_path_home_expand.html  fn.ssh_add_contains_public_key.html  index.html  sidebar-items.js  struct.EncryptedString.html  struct.SecretBytes.html  struct.SecretString.html
docs/cargo_auto_lib/auto_git_mod/: fn.git_has_remote.html  fn.git_is_local_repository.html  fn.new_local_repository.html  fn.process_git_remote.html  index.html  sidebar-items.js
docs/cargo_auto_lib/auto_github_mod/: constant.GITHUB_TOKEN_ENC.html  constant.GITHUB_TOKEN_JSON_PATH.html  constant.GITHUB_TOKEN_PATH.html  constant.RELEASES_MD.html  fn.to_path.html  (+32 more)
docs/static.files/: SourceSerif4-LICENSE-3bb119e13b1258b7.md
examples/: example_01_auto_cargo_toml_to_md.rs  filehash.rs  plantuml1.rs
examples/plantuml/: input1_for_plantuml.md  input1_for_plantuml_new.md  input2_for_plantuml.md
logs/: automation_tasks_rs.log.2024-04-17
sample_data/: input1_for_plantuml.md  input2_for_plantuml.md  output1_for_plantuml.md  output2_for_plantuml.md
src/: auto_cargo_toml_mod.rs  auto_cargo_toml_to_md_mod.rs  auto_check_micro_xml_mod.rs  auto_copy_files_to_strings_mod.rs  auto_crates_io_mod.rs  auto_delete_old_js_snippets_mod.rs  auto_doc_tidy_html_mod.rs  auto_encrypt_decrypt_with_ssh_mod.rs  auto_git_mod.rs  auto_github_mod.rs  auto_helper_functions_mod.rs  auto_lines_of_code_mod.rs  auto_md_to_doc_comments_mod.rs  auto_plantuml_mod.rs  auto_plantuml_to_svg_mod.rs  auto_playground_mod.rs  auto_semver_mod.rs  auto_semver_or_date_mod.rs  auto_shell_mod.rs  auto_ssh_mod.rs  auto_version_from_date_mod.rs  error_mod.rs  lib.rs  public_api_mod.rs  utils_mod.rs
(+262 files in other folders)
