[package]
name = "cargo_auto_lib"
version = "2.0.8"
authors = ["Bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "Automation tasks coded in Rust language for the workflow of Rust projects"
repository = "https://github.com/automation-tasks-rs/cargo_auto_lib"
readme = "README.md"
license = "MIT"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["maintained","ready-for-use", "rustlang","automation","workflow"]
categories = ["development-tools::build-utils"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "doc_comments/*",
    "src/*",
]

[dependencies]
lazy_static="1.4.0"
regex = "1.10.3"
termion = "3.0.0"
glob = "0.3.1"
chrono="0.4.34"
filetime = "0.2.23"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = {version= "1.0.114", features=["std"]}
toml = "0.8.10"
anyhow="1.0.80"
cargo_toml = "0.19.1"
reader_for_microxml="2.0.1"
semver="1.0.22"
sha2 = "0.10.8"
base64ct = {version = "1.6.0", features = ["alloc"] }
deflate = "1.0.0"
radix64 = "0.6.2"
reqwest = { version = "0.11.24", features = ["blocking", "stream"] }
ring = "0.17.8"
data-encoding = "2.5.0"
thiserror="1.0.57"
pretty_dbg = "1.0.54"
home = "0.5.9"
inquire = "0.7.0"
ssh2-config = "0.2.3"
tokio-util = {version = "0.7.10", features = ["codec"]}
tokio = {version = "1.36.0", features = ["rt","rt-multi-thread","fs"]}
url="2.5.0"
urlencoding = "2.1.3"

ssh-key = { version = "0.6.4", features = [ "rsa", "encryption"] }
ssh-agent-client-rs = "0.9.0"
rsa = { version = "0.9.6", features = ["sha2","pem"] }
zeroize = "1.7.0"
aes-gcm = "0.10.3"
camino = "1.1.6"
