[package]
name = "cargo_auto_lib"
# SemVer rules for libraries:
# increment MAJOR version when you make breaking changes (incompatible API changes)
# increment MINOR version when you add functionality (that are backward compatible)
# increment PATCH version when you make bug fixes (that are backward compatible)
# PATCH version MUST be reset to 0 when MINOR version is incremented.
# PATCH and MINOR versions MUST be reset to 0 when MAJOR version is incremented.
version = "3.0.6"
authors = ["Bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "Automation tasks coded in Rust language for the workflow of Rust projects"
repository = "https://github.com/automation-tasks-rs/cargo_auto_lib"
readme = "README.md"
license = "MIT"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["maintained","ready-for-use", "rustlang","automation","workflow"]
categories = ["development-tools::build-utils"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "doc_comments/*",
    "src/*",
]

[dependencies]
# SemVer rules: Major version zero (0.y.z) is for initial development. Anything MAY change at any time. The public API SHOULD NOT be considered stable.
# WARNING: Although dependencies in Cargo.toml look like a specific version of the crate, they are just like a caret version (^x.y.z) and actually specify 
# the minimum version and allow automatic SemVer compatible updates up to a MAJOR increment! Always check the true version with `cargo tree`!
lazy_static="1.5.0"
regex = "1.11.1"
glob = "0.3.2"
# the chrono clock default feature cannot compile in git-bash.
chrono={version="0.4.40", default-features = false, features=["now"]}
filetime = "0.2.25"
serde = "1.0.218"
serde_derive = "1.0.218"
serde_json = {version= "1.0.140", features=["std"]}
anyhow="1.0.97"
cargo_toml = "0.22.0"
reader_for_microxml="2.0.1"
semver="1.0.26"
sha2 = "0.10.8"
base64ct = {version = "1.6.0", features = ["alloc"] }
deflate = "1.0.0"
radix64 = "0.6.2"
reqwest = { version = "0.12.12", features = ["blocking", "stream"] }
# ring = "0.17.11"
data-encoding = "2.8.0"
thiserror="2.0.12"

home = "0.5.11"
inquire = "0.7.5"
urlencoding = "2.1.3"

camino = "1.1.9"
secrecy = "0.10.3"
