[package]
name = "automation_tasks_rs"
version = "0.1.1"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
description = "cargo auto - automation tasks written in Rust language"
publish = false

[dependencies]
# cargo_auto_lib = "1.2.3"
cargo_auto_lib = {path = "/home/rustdevuser/rustprojects/cargo_auto_lib"}
pretty_dbg = "1.0.49"
